--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,6 @@ jobs:
         env:
           DOMAIN: ${{vars.DOMAIN}}
           SUB_DOMAIN: ${{vars.SUB_DOMAIN}}
-      - run: cat ./devops-nginx.conf
 
       - uses: actions/download-artifact@v4
         with:
@@ -54,14 +53,15 @@ jobs:
       - name: testing ipv6 for command
         run: |
           curl -m 9 --ipv6 --verbose https://google.com
-      - name: test
-        run: echo ${{secrets.DOCKER_USERNAME}}
 
       - name: Docker Login
         uses: docker/login-action@v3.3.0
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
+
+      - name: Print devops-nginx.conf
+        run: cat ./devops-nginx.conf
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v6.9.0
